[package]
name = "mithril"
version = "0.1.0"
authors = ["Phil Turnbull <philip.turnbull@gmail.com>"]
homepage = "https://github.com/philipturnbull/mithril"
repository = "https://github.com/philipturnbull/mithril"
readme = "README.md"
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
ansi_term = "0.11.0"
clap = "2.32.0"
goblin = "0.0.17"
lazy_static = "1.1.0"
