[package]
name = "mithril-elf"
version = "0.1.0"
authors = ["Phil Turnbull <philip.turnbull@gmail.com>"]
homepage = "https://github.com/philipturnbull/mithril"
repository = "https://github.com/philipturnbull/mithril"
readme = "README.md"
license = "MIT"

[dependencies]
goblin = "0.0.17"
lazy_static = "1.1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
